--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -45,8 +45,8 @@
 
 
 
- @media screen and (max-width: 690px) {
-    .nav{
+@media screen and (max-width: 690px) {
+    .nav {
         margin-bottom: 250px;
         flex-direction: row;
     }
@@ -74,3 +74,14 @@
     } ;
     }
   
+    @media screen and (max-width: 350px) {
+        .logo{
+            display: flex;
+            text-align: center;
+        }
+        .icon{
+            display: flex;
+            text-align: center;
+        }
+    }
+      
