--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -50,28 +50,25 @@
         visibility: visible;
         color: blanchedalmond;
     }
-    .nav{
-        display: flex;
-        
-    }
     .logo{
         width: 100%;
         justify-content: center;
         background-color: rgb(4, 2, 0);
         color: rgb(64, 255, 0);
-        padding-left: 0%;
     }
-    .links{
-        background-color: rgb(40, 40, 37);
-        color: rgb(19, 18, 17);
+    .links h4{
+        background-color: #000000;
+        color: #ffff05;
     }
     .option{
-        height: 250px;
-        width: 100vw;
+        color: #e5ff00;
+        background-color: #000000;
         display: flex;
+        width: 100vw;
+        gap: 10px;
         flex-direction: column;
-        background-color:rgb(40, 40, 37);
-        color: rgb(234, 231, 228);
+        height: 200px;
+        padding-top: 20px;
     } ;
     }
   
