--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -62,13 +62,12 @@
     }
     .option{
         color: #e5ff00;
-        background-color: #000000;
-        display: flex;
+        gap: 5%;
         width: 100vw;
-        gap: 10px;
+        justify-content: center;
+        text-align: left;
         flex-direction: column;
         height: 200px;
-        padding-top: 20px;
     } ;
     }
   
