--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,8 @@
-/* .App {
+.App {
   text-align: center;
-  display: flex;
-  justify-content: center;
-  
-} */
+}
 
-/* .App-logo {
+.App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -38,4 +35,4 @@
   to {
     transform: rotate(360deg);
   }
-} */
+}
