--- a/src/components/Add.css
+++ b/src/components/Add.css
@@ -5,16 +5,17 @@
     gap: 20px;
     height: 200px;
     width: 200px;
-    padding-top: 400px;
+    margin-top: 250px;
     padding-left: 50%;
+    color: black;
 }
 
 .button{
     height: 60px;
-    width: 380px;
-    background-color: black;
+    width: 400px;
+    background-color: rgb(5, 0, 0);
     margin-top: 40px;
-    color: wheat;
+    color: rgb(255, 255, 255);
 }
 
 .Abutton{
@@ -28,8 +29,8 @@
 
 .box{
     height: 60px;
-    width: auto;
-    background-color: rgb(229, 255, 0);;
+    width: 400px;
+    background-color: rgb(185, 182, 182);;
     border-radius: 7px;
     margin-top: 20px;
     opacity: 2;
