--- a/src/components/Delete.css
+++ b/src/components/Delete.css
@@ -7,6 +7,7 @@
     width: 200px;
     padding-top: 400px;
     padding-left: 50%;
+    color: black;
 }
 
 .button1{
@@ -20,7 +21,7 @@
 .box1{
     height: 60px;
     width: 380px;
-    background-color:rgb(229, 255, 0);;
+    background-color:rgb(157, 157, 154);;
     border-radius: 7px;
     margin-top: 20px;
     opacity: 2;
