--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -63,6 +63,7 @@ body {
   line-height: 1.8;
   color: #ffffff; /* Changed from white for better visibility */
   font-weight: 500;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .login-container {
@@ -74,7 +75,7 @@ body {
 }
 
 .google-login-btn {
-  background-color: #34a853; /* Google Green */
+  background-color: #1a1b1a; /* Google Green */
   color: white;
   font-size: 16px;
   padding: 12px 24px;
@@ -87,9 +88,6 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
 }
 
-.google-login-btn:hover {
-  background-color: #2c8e47; /* Darker green on hover */
-}
 
 /* Footer Styling */
 footer {
@@ -131,6 +129,9 @@ footer p {
   .google-login-btn {
     font-size: 14px;
     padding: 10px 18px; /* Adjust button size */
+    width: 85vw;
+    display: flex;
+    justify-content: center;
   }
 
   footer {
@@ -147,6 +148,9 @@ footer p {
   .google-login-btn {
     font-size: 12px;
     padding: 8px 16px; /* Smaller button for very small screens */
+    width: 85vw;
+    display: flex;
+    justify-content: center;
   }
 
   footer {
