--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,7 +13,7 @@
 /* Logo Styles */
 .logor {
     color: rgb(64, 255, 0);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .logo {
@@ -31,7 +31,7 @@
 .links {
     background-color: black;
     color: rgb(255, 195, 0);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* Option Section */
