--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,12 +7,12 @@
     position: fixed;
     z-index: 3;
     top: 0;
-    background-color: black; /* Ensure background color is applied */
+    background-color:#2b2d42; /* Ensure background color is applied */
 }
 
 /* Logo Styles */
 .logor {
-    color: rgb(64, 255, 0);
+    color:#f2e9e4;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -22,15 +22,15 @@
     width: 50%;
     align-items: center;
     justify-content: flex-start; /* Align text to the right */
-    background-color: black;
+    background-color: #2b2d42;
     padding-left: 20px;
     color: rgb(64, 255, 0);
 }
 
 /* Links Section */
 .links {
-    background-color: black;
-    color: rgb(255, 195, 0);
+    background-color: #2b2d42;
+    color:#edf2f4;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -42,9 +42,9 @@
     justify-content: center;
     align-items: center;
     text-align: left;
-    color: rgb(229, 255, 0);
+    color:#edf2f4;
     gap: 5%;
-    background-color: black;
+    background-color: #2b2d42;
 }
 
 /* Media Query for Mobile (max-width: 690px) */
@@ -61,8 +61,7 @@
         padding-top: 20px;
         justify-content: center; /* Center logo horizontally */
         padding-left: 0; /* Remove padding */
-        background-color: rgb(4, 2, 0); /* Update background color for mobile */
-        color: rgb(64, 255, 0);
+        background-color: #2b2d42; /* Update background color for mobile */
         gap: 0; /* No gap between logo and options */
     }
 
@@ -78,7 +77,7 @@
 
     /* Adjust .option for mobile */
     .option {
-        color: #e5ff00;
+        color: #edf2f4;
         gap: 10%; /* Increase gap between items for better mobile spacing */
         width: 100vw; /* Ensure full width on mobile */
         justify-content: center; /* Center items in the option section */
