--- a/src/components/News.css
+++ b/src/components/News.css
@@ -3,8 +3,8 @@
 .shop{
     height: 50px;
     width: 200px;
-    background-color:rgb(255,195,0);
-    color:black;
+    background-color:#274c77;
+    color:#dee2ff;
     text-align: center;
     border-radius: 0px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
